// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`repo slug from APPVEYOR 1`] = `
{
  "project": "travis-build",
  "source": "APPVEYOR_REPO_NAME",
  "user": "travis-ci",
}
`;

exports[`repo slug from TRAVIS_REPO_SLUG 1`] = `
{
  "project": "travis-build",
  "source": "TRAVIS_REPO_SLUG",
  "user": "travis-ci",
}
`;
